--- a/dllSoftSGSST/dllSoftSGSST.vbproj
+++ b/dllSoftSGSST/dllSoftSGSST.vbproj
@@ -53,6 +53,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Web.Services" />
@@ -136,6 +137,7 @@
       <DependentUpon>dtsQuienLeReportaCargo.xsd</DependentUpon>
     </Compile>
     <Compile Include="Sistema\clBD.vb" />
+    <Compile Include="Sistema\clImagen.vb" />
     <Compile Include="Sistema\clSisConfigCtrBusDinamico.vb" />
     <Compile Include="Sistema\clSisEstado.vb" />
     <Compile Include="Sistema\clSisModulo.vb" />
