--- a/wSoftSGSST/wSoftSGSST.vbproj
+++ b/wSoftSGSST/wSoftSGSST.vbproj
@@ -185,6 +185,10 @@
     <Content Include="Images\OpcPagina\ibtnCondSaludGris.png" />
     <Content Include="Images\OpcPagina\ibtnCondSaludAzul.png" />
     <Content Include="Images\PnlInfo\imPnlInfoPeligro.png" />
+    <Content Include="Images\PrimerInicio\imEmpezarGest.fw.png" />
+    <Content Include="Images\PrimerInicio\imEvaluacionInicial.fw.png" />
+    <Content Include="Images\PrimerInicio\imLogoPrimerInicio.fw.png" />
+    <Content Include="Images\PrimerInicio\imReconocimientoInicial.fw.png" />
     <Content Include="js\alertify.js" />
     <Content Include="js\alertify.min.js" />
     <Content Include="js\jquery-1.8.3.min.js" />
