--- a/wSoftSGSST/bin/wSoftSGSST.dll.config
+++ b/wSoftSGSST/bin/wSoftSGSST.dll.config
@@ -10,7 +10,7 @@
   </configSections>
   <dataConfiguration defaultDatabase="cnnBDSGSST" />
   <connectionStrings>
-    <add name="cnnBDSGSST" connectionString="data source=(local)\sql2012;INITIAL CATALOG=SoftSGSST;USER ID=userSGSST;PWD=tmp" providerName="System.Data.SqlClient" />
+    <add name="cnnBDSGSST" connectionString="data source=(local)\SQL2012;INITIAL CATALOG=SoftSGSST;USER ID=SoftSGSST;PWD=tmp" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="strFormatoFecha" value="dd/MM/yyyy"/>
